--- a/glotrix/apps/cms/src/app/dashboard/profile-editor/profile/profile.component.html
+++ b/glotrix/apps/cms/src/app/dashboard/profile-editor/profile/profile.component.html
@@ -11,7 +11,8 @@
       </gt-avatar>
     </section>
     <section class="col-sm-10" *ngIf="entries$">
-      <gt-form-builder [entries]="entries$ | async"> </gt-form-builder>
+      <gt-form-builder [entries]="entries$ | async" (submitted)="onSubmitted($event)">
+      </gt-form-builder>
     </section>
   </section>
 </div>
