--- a/glotrix/libs/ui/search-bar/src/lib/search-bar/search-bar.component.html
+++ b/glotrix/libs/ui/search-bar/src/lib/search-bar/search-bar.component.html
@@ -1,7 +1,14 @@
 <div class="input-group mb-4 border rounded-pill p-1">
   <div class="input-group-prepend border-0">
-    <button id="button-addon4" type="button" class="btn btn-link text-info"><i class="fa fa-search"></i></button>
+    <button id="button-addon4" type="button" class="btn btn-link text-info">
+      <i class="fa fa-search"></i>
+    </button>
   </div>
-  <input type="search" [placeholder]="placeholder" aria-describedby="button-addon4"
-    class="form-control bg-none border-0">
+  <input
+    type="search"
+    [placeholder]="placeholder"
+    aria-describedby="button-addon4"
+    class="form-control bg-none border-0"
+    (change)="onKeywordChange($event)"
+  />
 </div>
