--- a/glotrix/apps/cms/src/app/dashboard/profile-editor/profile/profile.component.html
+++ b/glotrix/apps/cms/src/app/dashboard/profile-editor/profile/profile.component.html
@@ -1,14 +1,7 @@
 <div class="container">
   <section class="row pt-3">
     <section class="col-sm-2 text-center">
-      <gt-avatar
-        [width]="200"
-        [height]="200"
-        [source]="
-          'https://m.media-amazon.com/images/S/aplus-media/mg/dbf4301f-af40-46f2-9a87-a99deddcd9a2._SL300__.jpg'
-        "
-      >
-      </gt-avatar>
+      <gt-avatar [width]="200" [height]="200" [source]="photoUrl"> </gt-avatar>
     </section>
     <section class="col-sm-10" *ngIf="entries$">
       <gt-form-builder [entries]="entries$ | async" (submitted)="onSubmitted($event)">
