adding product cards

--- a/glotrix/apps/online-store/src/app/dashboard/product/category-filter/category-filter.component.html
+++ b/glotrix/apps/online-store/src/app/dashboard/product/category-filter/category-filter.component.html
@@ -1,1 +1,7 @@
-<p>category-filter works!</p>
+<select class="form-control">
+  <option>Select a category</option>
+  <option>2</option>
+  <option>3</option>
+  <option>4</option>
+  <option>5</option>
+</select>
