--- a/glotrix/apps/online-store/src/app/dashboard/product/product-list/product-list.component.html
+++ b/glotrix/apps/online-store/src/app/dashboard/product/product-list/product-list.component.html
@@ -8,7 +8,7 @@
     <gt-category-filter class="col-sm-3"></gt-category-filter>
   </section>
   <section class="row">
-    <div class="card-group">
+    <div class="card-group col-sm-12 ml-sm-auto mr-sm-auto">
       <gt-product-card
         *ngFor="let product of products$ | async"
         [product]="product"
