--- a/glotrix/apps/online-store/src/app/dashboard/product/product-detail/product-detail.component.html
+++ b/glotrix/apps/online-store/src/app/dashboard/product/product-detail/product-detail.component.html
@@ -1,4 +1,4 @@
-<div class="row col-12 pt-3">
+<div class="row col-12 pt-3" *ngIf="product$ | async as product">
   <div class="col-4">
     <gt-carousel [images]="product.images"></gt-carousel>
   </div>
