--- a/glotrix/apps/online-store/src/app/dashboard/cart/cart-item/cart-item.component.scss
+++ b/glotrix/apps/online-store/src/app/dashboard/cart/cart-item/cart-item.component.scss
@@ -13,4 +13,16 @@
 }
 .card-body {
   border-left: 1px solid #f89937;
+  height: 100%;
+}
+
+.btn {
+  color: #f89937;
+}
+
+i {
+  padding: 10px;
+}
+.pointer {
+  cursor: pointer;
 }
