--- a/glotrix/apps/cms/src/app/dashboard/product-manager/category-filter/category-filter.component.html
+++ b/glotrix/apps/cms/src/app/dashboard/product-manager/category-filter/category-filter.component.html
@@ -1,7 +1,4 @@
-<select class="form-control">
-  <option>Select a category</option>
-  <option>2</option>
-  <option>3</option>
-  <option>4</option>
-  <option>5</option>
+<select class="form-control" (change)="onChangeCategory($event.target.value)">
+  <option value>Select a category</option>
+  <option *ngFor="let category of categories$ | async">{{ category }}</option>
 </select>
