--- a/glotrix/apps/cms/src/app/dashboard/product-manager/table-main/table-main.component.html
+++ b/glotrix/apps/cms/src/app/dashboard/product-manager/table-main/table-main.component.html
@@ -12,8 +12,8 @@
     </tr>
   </thead>
   <tbody>
-    <tr *ngFor="let product of products; index as i">
-      <th scope="row">{{ i + 1 }}</th>
+    <tr *ngFor="let product of products$ | async">
+      <th scope="row">{{ product.id }}</th>
       <td>{{ product.name }}</td>
       <td>{{ product.description }}</td>
       <td>{{ product.price | currency }}</td>
