--- a/glotrix/libs/ui/tables/src/lib/pagination/pagination.component.html
+++ b/glotrix/libs/ui/tables/src/lib/pagination/pagination.component.html
@@ -1,15 +1,15 @@
 <nav aria-label="Page navigation example">
-  <ul class="pagination">
-    <li class="page-item">
-      <a class="page-link" href="#" aria-label="Previous">
+  <ul class="pagination" *ngIf="totalPages() > 1">
+    <li *ngIf="page != 1" (click)="onPageClicked(prevPage())" class="page-item">
+      <a class="page-link" aria-label="Previous">
         <span aria-hidden="true">&laquo;</span>
       </a>
     </li>
-    <li class="page-item"><a class="page-link" href="#">1</a></li>
-    <li class="page-item"><a class="page-link" href="#">2</a></li>
-    <li class="page-item"><a class="page-link" href="#">3</a></li>
-    <li class="page-item">
-      <a class="page-link" href="#" aria-label="Next">
+    <li class="page-item" *ngFor="let p of pagesRange()">
+      <a (click)="onPageClicked(p)" class="page-link">{{ p }}</a>
+    </li>
+    <li class="page-item" *ngIf="totalPages() > page">
+      <a class="page-link" (click)="onPageClicked(nextPage())" aria-label="Next">
         <span aria-hidden="true">&raquo;</span>
       </a>
     </li>
