--- a/glotrix/apps/online-store/src/app/dashboard/product/product-card/product-card.component.html
+++ b/glotrix/apps/online-store/src/app/dashboard/product/product-card/product-card.component.html
@@ -9,7 +9,6 @@
     <div class="pull-right pr-2">
       <a [routerLink]="['detail', product.id]">See more</a>
     </div>
-    <button>Add to Cart</button>
+    <button (click)="addToCart()">Add to Cart</button>
   </div>
 </div>
-<!--https://on.ft.com/2kMTPnh-->
