adding product-filter store on online-store app

--- a/glotrix/apps/online-store/src/app/dashboard/product/product-list/product-list.component.html
+++ b/glotrix/apps/online-store/src/app/dashboard/product/product-list/product-list.component.html
@@ -15,4 +15,13 @@
       ></gt-product-card>
     </div>
   </section>
+  <section class="row" *ngIf="pagination$ | async as pagination">
+    <gt-pagination
+      class="col-sm-12"
+      [total]="total$ | async"
+      [page]="pagination.page"
+      [pageSize]="pagination.size"
+      (pageChange)="updatePagination($event)"
+    ></gt-pagination>
+  </section>
 </div>
