--- a/glotrix/apps/online-store/src/app/dashboard/dashboard-layout/dashboard-layout/dashboard-layout.component.html
+++ b/glotrix/apps/online-store/src/app/dashboard/dashboard-layout/dashboard-layout/dashboard-layout.component.html
@@ -12,6 +12,9 @@
       [(isSidebarActive)]="isSidebarActive"
       (logOut)="onLogOut($event)"
     >
+      <a class="pr-3" (click)="goToCart()"
+        ><i class="fa fa-shopping-cart" aria-hidden="true"></i
+      ></a>
     </gt-top-bar>
     <div class="container-fluid">
       <router-outlet></router-outlet>
