--- a/glotrix/libs/ui/navigation/src/lib/top-bar/top-bar.component.html
+++ b/glotrix/libs/ui/navigation/src/lib/top-bar/top-bar.component.html
@@ -3,6 +3,7 @@
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="float-right">
+    <ng-content></ng-content>
     <a class="right-padding" (click)="onLogOut()">Log out</a>
     <gt-avatar class="right-padding" [source]="userData?.photoUrl"></gt-avatar>
   </div>
