fixing product edit (in progress)

--- a/apps/cms/src/app/dashboard/product-manager/product-detail/product-detail.component.html
+++ b/apps/cms/src/app/dashboard/product-manager/product-detail/product-detail.component.html
@@ -1,12 +1,13 @@
 <div class="row pl-3 pt-3">
-  <!-- <div class="col-sm-5">
-    <section class="blue-border">
-      <gt-images-upload [(images)]="product.images"></gt-images-upload>
-    </section>
-  </div> -->
-  <div class="col-sm-7">
-    <section class="orange-border" *ngIf="entries$">
-      <gt-form-builder [entries]="entries$ | async"> </gt-form-builder>
-    </section>
-  </div>
+	<div class="col-sm-5">
+		<section class="blue-border">
+			<gt-images-upload [(images)]="productImages"></gt-images-upload>
+		</section>
+	</div>
+	<div class="col-sm-7">
+		<section class="orange-border" *ngIf="entries$">
+			<gt-form-builder [entries]="entries$ | async" (submitted)="onSubmitted($event)">
+			</gt-form-builder>
+		</section>
+	</div>
 </div>
