--- a/libs/ui/login/src/lib/welcome-banner/welcome-banner.component.html
+++ b/libs/ui/login/src/lib/welcome-banner/welcome-banner.component.html
@@ -1,16 +1,32 @@
-<div class="welcome-container">
-  <div class="row pull-left">
-    <span class="brand-name">{{ banner.upperText }}</span>
-  </div>
-  <div class="row">
-    <gt-avatar [width]="600" [height]="600" [source]="banner.imageUrl"> </gt-avatar>
-  </div>
-  <div class="col-sm-3 offset-sm-1 fixed-bottom">
-    <div class="row">
-      <h2>{{ banner.title }}</h2>
-    </div>
-    <div class="row">
-      <span>{{ banner.contentText }}</span>
-    </div>
-  </div>
-</div>
+<section class="welcome-container">
+	<div class="d-flex flex-column m-3 h-100">
+		<div class="p-2 mb-auto">
+			<span class="brand-name">{{ banner.upperText }}</span>
+		</div>
+		<div class="p-2 align-self-center">
+			<gt-avatar [width]="500" [source]="banner.imageUrl"> </gt-avatar>
+		</div>
+		<div class="p-2 mt-auto w-50">
+			<h2>{{ banner.title }}</h2>
+			<span>{{ banner.contentText }}</span>
+		</div>
+	</div>
+</section>
+
+<!--
+<section class="d-flex flex-column">
+	<span class="col-12 brand-name">{{ banner.upperText }}</span>
+
+	<gt-avatar class="col-6" [source]="banner.imageUrl"> </gt-avatar>
+
+	<div class="col-6">
+		<div class="row">
+			<h2>{{ banner.title }}</h2>
+		</div>
+		<div class="row">
+			<span>{{ banner.contentText }}</span>
+		</div>
+	</div>
+</section>
+
+-->
