--- a/libs/ui/login/src/lib/welcome-banner/welcome-banner.component.scss
+++ b/libs/ui/login/src/lib/welcome-banner/welcome-banner.component.scss
@@ -1,17 +1,14 @@
 .welcome-container {
-  background-color: #f89937;
-  color: white;
-  min-height: 211px;
-  -webkit-clip-path: polygon(0 0, 100% 35%, 100% 65%, 0% 100%);
-  clip-path: polygon(75% 0%, 100% 50%, 75% 100%, 0% 100%, 0 49%, 0% 0%);
-  padding: 20px;
-  height: 100vh;
+	background-color: #f89937;
+	color: white;
+	min-height: 211px;
+	clip-path: polygon(75% 0%, 100% 50%, 75% 100%, 0% 100%, 0 49%, 0% 0%);
+	padding: 20px;
+	height: 100vh;
+	padding-right: 25%;
 }
 
 .brand-name {
-  font-weight: 400;
-  font-style: italic;
-}
-.fixed-bottom {
-  padding-bottom: 2%;
+	font-weight: 400;
+	font-style: italic;
 }
