--- a/apps/cms/src/app/dashboard/product-editor/product/product.component.html
+++ b/apps/cms/src/app/dashboard/product-editor/product/product.component.html
@@ -1,13 +1,12 @@
 <div class="row pl-3 pt-3">
-  <div class="col-sm-5">
-    <section class="blue-border">
-      <gt-images-upload (filesLoaded)="onFilesLoaded($event)"></gt-images-upload>
-    </section>
-  </div>
-  <div class="col-sm-7">
-    <section class="orange-border">
-      <gt-form-builder [entries]="entries">
-      </gt-form-builder>
-    </section>
-  </div>
+	<div class="col-sm-5">
+		<section class="blue-border">
+			<gt-images-upload (filesLoaded)="onFilesLoaded($event)"></gt-images-upload>
+		</section>
+	</div>
+	<div class="col-sm-7" *ngIf="entries$ | async as entries">
+		<section class="orange-border">
+			<gt-form-builder [entries]="entries"> </gt-form-builder>
+		</section>
+	</div>
 </div>
