--- a/libs/ui/card/src/lib/card/card.component.scss
+++ b/libs/ui/card/src/lib/card/card.component.scss
@@ -2,3 +2,18 @@
   padding: 20px;
   border-style: none;
 }
+@keyframes jump {
+  0% {
+    transform: translate3d(0, 0, 0) scale3d(1, 1, 1);
+  }
+  40% {
+    transform: translate3d(0, 30%, 0) scale3d(0.7, 1.5, 1);
+  }
+  100% {
+    transform: translate3d(0, 100%, 0) scale3d(1.5, 0.7, 1);
+  }
+}
+.jump {
+  transform-origin: 50% 50%;
+  animation: jump 0.7s linear alternate infinite;
+}
